// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageRevisionDataloaderService load should load many 1`] = `
[
  [
    {
      "orderBy": [
        {
          "publishedAt": "desc",
        },
        {
          "createdAt": "desc",
        },
      ],
      "take": 3,
      "where": {
        "archivedAt": null,
        "pageId": "123",
      },
    },
  ],
  [
    {
      "orderBy": [
        {
          "publishedAt": "desc",
        },
        {
          "createdAt": "desc",
        },
      ],
      "take": 3,
      "where": {
        "archivedAt": null,
        "pageId": "321",
      },
    },
  ],
]
`;

exports[`PageRevisionDataloaderService load should load one 1`] = `
[
  [
    {
      "orderBy": [
        {
          "publishedAt": "desc",
        },
        {
          "createdAt": "desc",
        },
      ],
      "take": 3,
      "where": {
        "archivedAt": null,
        "pageId": "123",
      },
    },
  ],
]
`;

exports[`PageRevisionDataloaderService should prime 1`] = `
[
  "123",
  {},
]
`;
